fixing svgs on tablets

--- a/css/style.css
+++ b/css/style.css
@@ -608,6 +608,9 @@ h6 {
     color: var(--p-svg-color);
     inline-size: 100%;
   }
+  .hero-bg > svg.is-desktop-only {
+    block-size: 100%;
+  }
   .theme-dark .hero-bg > svg {
     --p-svg-color: hsl(var(--clr-primary-400));
   }
