--- a/scss/pages/home/_hero.scss
+++ b/scss/pages/home/_hero.scss
@@ -61,11 +61,16 @@
         top: -10.5rem;
     }
 
+
     & > svg {
         --p-svg-color: hsl(var(--clr-neutral-300));
 
         color: var(--p-svg-color);
         inline-size: 100%;
+
+        &.is-desktop-only {
+            block-size: 100%;
+        }
 
         #{$theme-dark} & {
             --p-svg-color: hsl(var(--clr-primary-400));
